apps/offapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: offapi
  namespace: offapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.off.wanna.community
      secretName: offapi-tls
  rules:
    - host: api.off.wanna.community
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: offapi
                port:
                  number: 80
